--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2>カポ　自己紹介</h2>
     <div class="aaa">
       <div class="tokotoko">
-        <img src="img/IMG_20220309_140657.jpg" alt="">
+        <img src="https://github.com/ryou-bit/kapotyan/blob/main/%E3%82%B5%E3%82%A4%E3%83%88/img/IMG_20220309_140657.jpg" alt="">
         <div class="ttl">カポ</div>
         <div class="explain">生後４か月</div>
       </div>
