--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="explain">生後４か月</div>
       </div>
       <div class="tokotoko">
-        <img src="img/IMG_20220309_140701.jpg" alt="">
+        <img src="https://github.com/ryou-bit/kapotyan/blob/main/%E3%82%B5%E3%82%A4%E3%83%88/img/IMG_20220309_140701.jpg" alt="">
         <div class="ttl">癒しのカポ</div>
         <div class="explain">水浴び可愛いです。</div>
       </div>
