--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="explain">水浴び可愛いです。</div>
       </div>
       <div class="tokotoko">
-        <img src="img/IMG_20220309_140731.jpg" alt="">
+        <img src="https://github.com/ryou-bit/kapotyan/blob/main/%E3%82%B5%E3%82%A4%E3%83%88/img/IMG_20220309_140731.jpg" alt="">
         <div class="ttl">イケメンなカポ</div>
         <div class="explain">スケボで遊びます。</div>
       </div>
