--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <img src="img/IMG_20220309_140756.jpg" alt="">
+      <img src="https://github.com/ryou-bit/kapotyan/blob/main/%E3%82%B5%E3%82%A4%E3%83%88/img/IMG_20220309_140756.jpg" alt="">
       <p>家族　カポです。</p>
     </div>
     <ul>
