--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>カポの生体</title>
   <meta name="description" content="MYペット　カポ　詳しい内容を説明します">
   <link rel="stylesheet" href="https://github.com/ryou-bit/kapotyan/blob/main/%E3%82%B5%E3%82%A4%E3%83%88/css/style.css">
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="https://github.com/ryou-bit/kapotyan/blob/main/%E3%82%B5%E3%82%A4%E3%83%88/css/reset.css">
 <body>
   <div class="header">
     <div class="logo">
